actualitzats guions de test per junit